<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/current_segment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:padding="10dp"
        android:text="@string/placeholder_time"
        android:textAlignment="center"
        android:textSize="60sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/start"
            app:icon="@drawable/baseline_play_arrow_24"
            app:layout_constraintBottom_toTopOf="@id/resetButton"
            app:layout_constraintEnd_toStartOf="@+id/stopButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/stop_text"
            app:icon="@drawable/baseline_stop_24"
            app:layout_constraintBottom_toTopOf="@id/resetButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/startButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/reset"
            app:icon="@drawable/baseline_replay_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/timeTravelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startButton"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/timeTravelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/time_travel"
            app:icon="@drawable/baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resetButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startButton"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/usage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/usage"
        android:textSize="15sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/segments_header"
        android:textAlignment="center"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/segments_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        android:layout_marginBottom="10dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/new_segment_text"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:hint="@string/new_segment_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_segment_time"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:hint="@string/new_segment_length_secs"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/new_segment_text"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_segment_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/add_segment"
            app:icon="@drawable/baseline_add_24"
            app:layout_constraintStart_toStartOf="@id/new_segment_text"
            app:layout_constraintTop_toBottomOf="@id/new_segment_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>